# fastApi

./: .env  car.db  pyproject.toml
car_api/: app.py  db.py
car_api/core/: database.py  security.py  settings.py
car_api/models/: __init__.py  cars.py  users.py
car_api/routers/: brands.py  users.py
car_api/schemas/: brands.py  users.py
migrations/: env.py
migrations/versions/: 617783f4414e_creacao_das_tabelas_car_e_brand.py  f95d23443290_criando_a_tabela_de_usuarios.py
